# MineGet

./: .gitignore  CMakeLists.txt  README.MD
MineGet/include/: callAPI.hh  callType.hh  mineget.hh  parseCommands.hh
MineGet/src/: CMakeLists.txt  callAPI.cc  mineget.cc  parseCommands.cc
